@@ -1,6 +1,6 @@
 Package: crs
-Version: 0.15-36
-Date: 2022-10-18
+Version: 0.15-37
+Date: 2022-12-31
 Imports: boot, stats, np, quantreg
 Suggests: logspline, quadprog, rgl
 Title: Categorical Regression Splines
