@@ -53,7 +53,7 @@ to others, kindly email me the relevant information and I will
 incorporate it into this FAQ.
 
 This FAQ refers to the most recent version, which as of this writing
-is 0.15-36. Kindly update your version should you not be using the
+is 0.15-37. Kindly update your version should you not be using the
 most current (from within R, \texttt{update.packages()} ought to do
 it, though also see \ref{update} below.). See the appendix in this
 file for cumulative changes between this and previous versions of the
@@ -650,6 +650,16 @@ For the second predictor use \texttt{x2} and
 \clearpage
 
 \appendix
+
+\section*{Changes from Version 0.15-36 to 0.15-37 [31-Dec-2022]}
+
+\begin{itemize}
+
+\item Fixed issue in snomadr.cpp reported by Brian Ripley \texttt{warning: 'sprintf' is deprecated: This function is provided for compatibility reasons only.  Due to security concerns inherent in the design of sprintf(3), it is highly recommended that you use snprintf(3) instead. [-Wdeprecated-declarations]}
+
+\item Fixed issue reported - compilation error on Alpine Linux \#9
+
+\end{itemize} 
 
 \section*{Changes from Version 0.15-35 to 0.15-36 [18-Oct-2022]}
 
